src/objects/PowerLoader__BulkEditTemplateField__c.object
<CustomObject>
    <fields>
        <fullName>PowerLoader__BulkEditTemplate__c</fullName>
        <label>BulkEditTemplate</label>
        <referenceTo>PowerLoader__BulkEditTemplate__c</referenceTo>
        <relationshipName>BulkEditTemplateFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PowerLoader__FieldOrder__c</fullName>
        <label>FieldOrder</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Filter_Prop__c</fullName>
        <label>Filter Prop</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Filter_Value__c</fullName>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Group__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Group</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Sort_Direction__c</fullName>
        <label>Sort Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>asc</fullName>
                </value>
                <value>
                    <fullName>des</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__Sort_Func__c</fullName>
        <label>Sort Func</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PowerLoader__Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PowerLoader__SplitAt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SplitAt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PowerLoader__SummaryType__c</fullName>
        <label>SummaryType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>#stat_average</fullName>
                </value>
                <value>
                    <fullName>#stat_count</fullName>
                </value>
                <value>
                    <fullName>#stat_max</fullName>
                </value>
                <value>
                    <fullName>#stat_min</fullName>
                </value>
                <value>
                    <fullName>#stat_total</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PowerLoader__Width__c</fullName>
        <label>Width</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Grid Template Column</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grid Template Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>